RustPkg: feature_osstring

--- a/RustPkg/Test/HelloWorld/Cargo.toml
+++ b/RustPkg/Test/HelloWorld/Cargo.toml
@@ -18,3 +18,5 @@ panic = "abort" # disable stack unwinding on panic
 
 [dependencies]
 r-efi = { path = "../../External/r-efi"}
+r-efi-services = {path = "../../External/r-efi-services"}
+r-efi-str = { path = "../../External/r-efi-str" }
