RustPkg: add new library r-efi-lib

--- a/RustPkg/Test/HelloWorld/Cargo.toml
+++ b/RustPkg/Test/HelloWorld/Cargo.toml
@@ -18,5 +18,6 @@ panic = "abort" # disable stack unwinding on panic
 
 [dependencies]
 r-efi = { path = "../../External/r-efi"}
+r-efi-lib = { path = "../../External/r-efi-lib" }
 r-efi-services = {path = "../../External/r-efi-services"}
 r-efi-str = { path = "../../External/r-efi-str" }
