--- a/RustPkg/External/r-efi-lib/Cargo.toml
+++ b/RustPkg/External/r-efi-lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "r-efi-services"
+name = "r-efi-lib"
 version = "0.1.0"
 authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
 edition = "2018"
@@ -7,5 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-r-efi = { path = "../r-efi"}
-r-efi-lib = { path = "../r-efi-lib" }
+r-efi = { path = "../../External/r-efi"}
