--- a/RustPkg/External/r-efi-lib/Cargo.toml
+++ b/RustPkg/External/r-efi-lib/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2018"
 
 [dependencies]
 r-efi = { path = "../../External/r-efi"}
+r-efi-str = { path = "../../External/r-efi-str" }
+log = "0.4.8"
+ucs2 = { version = "0.3.1"}
