--- a/RustPkg/External/efi-services/Cargo.toml
+++ b/RustPkg/External/efi-services/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "r-efi-str"
+name = "efi-services"
 version = "0.1.0"
 authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
 edition = "2018"
@@ -7,4 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ucs2 = { version = "0.3.1"}
+r-efi = { path = "../r-efi"}
+efi-lib = { path = "../efi-lib" }
+log = "0.4.8"
