--- a/RustPkg/External/efi-str/Cargo.toml
+++ b/RustPkg/External/efi-str/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "r-efi-services"
+name = "efi-str"
 version = "0.1.0"
 authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
 edition = "2018"
@@ -7,6 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-r-efi = { path = "../r-efi"}
-r-efi-lib = { path = "../r-efi-lib" }
-log = "0.4.8"
+ucs2 = { version = "0.3.1"}
