--- a/RustPkg/Test/HelloWorld/Cargo.toml
+++ b/RustPkg/Test/HelloWorld/Cargo.toml
@@ -18,7 +18,7 @@ panic = "abort" # disable stack unwinding on panic
 
 [dependencies]
 r-efi = { path = "../../External/r-efi"}
-r-efi-lib = { path = "../../External/r-efi-lib" }
-r-efi-services = {path = "../../External/r-efi-services"}
-r-efi-str = { path = "../../External/r-efi-str" }
+efi-lib = { path = "../../External/efi-lib" }
+efi-services = {path = "../../External/efi-services"}
+efi-str = { path = "../../External/efi-str" }
 log = "0.4.8"
