Enable file and function headers in config file

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -331,8 +331,8 @@ cmt_cpp_to_c                    = false
 cmt_indent_multi                = false     # Whether to apply changes to multi-line comments, including cmt_width,
                                             # keyword substitution and leading chars.
 cmt_insert_before_preproc       = false
-# cmt_insert_file_header          = default_file_header.txt
-# cmt_insert_func_header          = default_function_header.txt
+cmt_insert_file_header          = default_file_header.txt
+cmt_insert_func_header          = default_function_header.txt
 cmt_multi_check_last            = false
 cmt_multi_first_len_minimum     = 2
 cmt_reflow_mode                 = 1         # How to reflow comments.
