--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -268,7 +268,7 @@ align_assign_span               = 1         # The span for aligning on '=' in as
 align_assign_thresh             = 4
 align_edk2_style                = true      # Whether to apply edk2-specific alignment formatting
 align_enum_equ_span             = 1         # The span for aligning on '=' in enums.
-align_func_params               = false     # Whether to align variable definitions in prototypes and functions.
+align_func_params               = true      # Whether to align variable definitions in prototypes and functions.
 align_func_params_gap           = 0
 align_func_params_span          = 0         # The span for aligning parameter definitions in function on parameter name.
 align_func_params_thresh        = 0
