--- a/.mergify/config.yml
+++ b/.mergify/config.yml
@@ -5,6 +5,8 @@
 # * auto close branches that are not from an EDK II Maintainer
 # * post a comment on pull requests that have merge conflicts.
 # * post a comment on pull requests that have PatchCheck.py errors.
+# * post an explanatory comment on pull requests that have the "do-not-merge-pr" label
+# * do not allow merging of pull requests with the "do-not-merge-pr" label
 #
 # Configuration Notes:
 # * Update the 'base=edk2-ci' statements with the name of the branch to merge
@@ -17,6 +19,8 @@
 #   of this file on other branches of a repo are ignored by Mergify.
 #
 # Copyright (c) 2019 - 2021, Intel Corporation. All rights reserved.<BR>
+# Copyright (c) Microsoft Corporation.
+#
 # SPDX-License-Identifier: BSD-2-Clause-Patent
 #
 # https://github.com/apps/mergify
@@ -29,12 +33,14 @@ queue_rules:
     conditions:
       - base~=(^main|^master|^stable/)
       - label=push
+      - label!=do-not-merge-pr
 
 pull_request_rules:
   - name: Automatically merge a PR when all required checks pass and 'push' label is present
     conditions:
       - base~=(^main|^master|^stable/)
       - label=push
+      - label!=do-not-merge-pr
     actions:
       queue:
         method: rebase
@@ -48,3 +54,11 @@ pull_request_rules:
     actions:
       comment:
         message: PR can not be merged due to conflict.  Please rebase and resubmit
+
+  - name: Post a comment stating a dependabot PR should not be merged
+    conditions:
+      - base~=(^main|^master|^stable/)
+      - label=do-not-merge-pr
+    actions:
+      comment:
+        message: This PR is only for reference and cannot be merged!
