uncrustify.cfg: Force code to column 80

--- a/.pytool/Plugin/UncrustifyCheck/uncrustify.cfg
+++ b/.pytool/Plugin/UncrustifyCheck/uncrustify.cfg
@@ -16,10 +16,10 @@ utf8_byte                       = false
 utf8_force                      = true
 
 # Code width / line splitting
-#code_width                      =120     # TODO: This causes non-deterministic behaviour in some cases when code wraps
-ls_code_width                   =false
-ls_for_split_full               =true
-ls_func_split_full              =true
+code_width                      =80     # TODO: This causes non-deterministic behaviour in some cases when code wraps
+ls_code_width                   =true   # Whether to split lines as close to code_width as possible and ignore some groupings.
+ls_for_split_full               =true   # Whether to fully split long 'for' statements at semi-colons.
+ls_func_split_full              =true   # Whether to fully split long function protos/calls at commas.
 pos_comma                       =trail
 
 # 5.1.7  All files must end with CRLF
